tests/ui/traits/const-traits/trait-where-clause-const.stderr
error[E0277]: the trait bound `T: [const] Bar` is not satisfied
  --> $DIR/trait-where-clause-const.rs:21:5
   |
LL |     T::b();
   |     ^
   |
note: required by a bound in `Foo::b`
  --> $DIR/trait-where-clause-const.rs:15:24
   |
LL |     fn b() where Self: [const] Bar;
   |                        ^^^^^^^^^^^ required by this bound in `Foo::b`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
